--- a/index.html
+++ b/index.html
@@ -61,23 +61,49 @@
             <div class="container">
                 <h2 class="section-title visually-hidden">Our advantages</h2>
                 <ul class="advantages list">
-                    <li class="chapter skill">
+                    <li class="chapter">
+                        <div class="icon-box">
+                            <svg class="icon" width="64" height="64">
+                              <use href="./images/icons.svg/sprite.svg#icon-antenna"></use>
+                            </svg>
+                          </div>
                         <h3 class="section-item">Strategy</h3>
-                        <p class="item-description skills">Our goal is to identify the business
-                            problem to walk away with the perfect and creative solution.</p>
+                        <p class="item-description skills"
+                            >Our goal is to identify the business problem to walk away with the perfect and creative solution.</p
+                        >
                     </li>
-                    <li class="chapter skill">
+                    <li class="chapter">
+                        <div class="icon-box">
+                            <svg class="icon" width="70" height="70">
+                              <use href="./images/icons.svg/sprite.svg#icon-clock"></use>
+                            </svg>
+                          </div>
                         <h3 class="section-item">Punctuality</h3>
-                        <p class="item-description skills">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                        <p class="item-description skills"
+                            >Bring the key message to the brand's audience for the best price within the shortest possible time.</p
+                        >
                     </li>
-                    <li class="chapter skill">
+                    <li class="chapter">
+                        <div class="icon-box">
+                            <svg class="icon" width="70" height="70">
+                              <use href="./images/icons.svg/sprite.svg#icon-diagram"></use>
+                            </svg>
+                          </div>
                         <h3 class="section-item">Diligence</h3>
-                        <p class="item-description skills">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                        <p class="item-description skills"
+                            >Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                         </p>
                     </li>
-                    <li class="chapter skill">
+                    <li class="chapter">
+                        <div class="icon-box">
+                            <svg class="icon" width="70" height="70">
+                              <use href="./images/icons.svg/sprite.svg#icon-astronaut"></use>
+                            </svg>
+                          </div>
                         <h3 class="section-item">Technologies</h3>
-                        <p class="item-description skills">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                        <p class="item-description skills"
+                            >Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p
+                        >
                     </li>
                 </ul>
             </div>
@@ -125,28 +151,28 @@
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -165,28 +191,28 @@
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -205,28 +231,28 @@
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -245,28 +271,28 @@
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social">
                                     <a href="" class="btn-social">
                                         <svg class="icon-team-social">
-                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -284,42 +310,42 @@
                     <li class="client">
                         <a href="" class="client-page">
                             <svg class="client-icon" width="104" height="56">
-                                <use href="./images/icons.svg#icon-customer1"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-logo-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client">
                         <a href="" class="client-page">
                             <svg class="client-icon" width="104" height="56">
-                                <use href="./images/icons.svg#icon-customer2"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-logo-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client">
                         <a href="" class="client-page">
                             <svg class="client-icon" width="104" height="56">
-                                <use href="./images/icons.svg#icon-customer3"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-logo-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client">
                         <a href="" class="client-page">
                             <svg class="client-icon" width="104" height="56">
-                                <use href="./images/icons.svg#icon-customer4"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-logo-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client">
                         <a href="" class="client-page">
                             <svg class="client-icon" width="104" height="56">
-                                <use href="./images/icons.svg#icon-customer5"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-logo-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client">
                         <a href="" class="client-page">
                             <svg class="client-icon" width="104" height="56">
-                                <use href="./images/icons.svg#icon-customer6"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-logo-6"></use>
                             </svg>
                         </a>
                     </li>
@@ -343,28 +369,28 @@
                     <li class="social-item">
                         <a href="" class="foot-link-back">
                             <svg class="foot-link-sign" width="24px" height="24px">
-                                <use href="./images/icons.svg#icon-instagram-footer"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="" class="foot-link-back">
                             <svg class="foot-link-sign" width="24px" height="24px">
-                                <use href="./images/icons.svg#icon-twitter-footer"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="" class="foot-link-back">
                             <svg class="foot-link-sign" width="24px" height="24px">
-                                <use href="./images/icons.svg#icon-facebook-footer"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="" class="foot-link-back">
                             <svg class="foot-link-sign" width="24px" height="24px">
-                                <use href="./images/icons.svg#icon-linkedin-footer"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
@@ -393,7 +419,7 @@
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
                 <svg class="btn-modal" width="8" height="8">
-                    <use href="./images/icons.svg#icon-modal-btn-default"></use>
+                    <use href="./images/icons.svg/sprite.svg#icon-xrestuk"></use>
                 </svg>
             </button>
             <form autocomplete="off">
@@ -403,7 +429,7 @@
                     <input type="text" name="name">
                     <span class="person-input">
                         <svg class="input-icon" width="18" height="24">
-                            <use href="./images/icons.svg#modal-person"></use>
+                            <use href="./images/icons.svg/sprite.svg#icon-persoma"></use>
                         </svg>
                     </span>
                 </label>
@@ -413,7 +439,7 @@
                     <input type="tel" name="tel">
                     <span class="person-input">
                         <svg class="input-icon" width="18" height="24">
-                            <use href="./images/icons.svg#modal-phone"></use>
+                            <use href="./images/icons.svg/sprite.svg#icon-tel111"></use>
                         </svg>
                     </span>
                 </label>
@@ -423,7 +449,7 @@
                     <input type="email" name="email" autocomplete="on">
                     <span class="person-input">
                         <svg class="input-icon" width="18" height="24">
-                            <use href="./images/icons.svg#modal-email"></use>
+                            <use href="./images/icons.svg/sprite.svg#icon-em222"></use>
                         </svg>
                     </span>
                 </label>
@@ -437,7 +463,7 @@
                     <input class="checkbox" type="checkbox" name="privacy policy">
                     <span class="logo-check">
                         <svg class="check" width="10" height="8">
-                            <use href="./images/icons.svg#logo-check"></use>
+                            <use href="./images/icons.svg/sprite.svg#icon-11111galo"></use>
                         </svg>
                     </span>
                 I accept the terms and conditions of the <span>
