--- a/portfolio.html
+++ b/portfolio.html
@@ -228,28 +228,28 @@
                     <li class="social-item">
                         <a href="" class="foot-link-back">
                             <svg class="foot-link-sign" width="24px" height="24px">
-                                <use href="./images/icons.svg#icon-instagram-footer"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="" class="foot-link-back">
                             <svg class="foot-link-sign" width="24px" height="24px">
-                                <use href="./images/icons.svg#icon-twitter-footer"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="" class="foot-link-back">
                             <svg class="foot-link-sign" width="24px" height="24px">
-                                <use href="./images/icons.svg#icon-facebook-footer"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="" class="foot-link-back">
                             <svg class="foot-link-sign" width="24px" height="24px">
-                                <use href="./images/icons.svg#icon-linkedin-footer"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
