--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
         <div class="mobile-btn-close">
             <button type="button" class="btn-menu-close js-close-menu">
                 <svg class="btn-cross" width="8" height="8" aria-label="Mobile menu switcher">
-                    <use class="icon-cross" href="./images/icons.svg#close-mobile"></use>
+                    <use class="icon-cross" href="./images/icons.svg/sprite.svg#icon-xrestuk"></use>
                 </svg>
             </button>
         </div>
@@ -515,28 +515,28 @@
                     <li class="chapter-social">
                         <a href="" class="mobile-link">
                             <svg class="mob-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#instagram-menu"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="chapter-social">
                         <a href="" class="mobile-link">
                             <svg class="mob-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#twitter-menu"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="chapter-social">
                         <a href="" class="mobile-link">
                             <svg class="mob-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#facebook-menu"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="chapter-social">
                         <a href="" class="mobile-link">
                             <svg class="mob-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#linkedin-menu"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
