--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </a>
                 <button type="button" class="btn-menu-burger js-open-menu">
                     <svg class="btn-mobile" width="32" height="32" aria-label="Mobile menu switcher">
-                        <use class="icon-burger" href="./images/icons.svg#menu-burger"></use>
+                        <use class="icon-burger" href="./images/icons.svg/sprite.svg#icon-tttt"></use>
                     </svg>
                 </button>
             </div>
