--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                 </a>
                 <button type="button" class="btn-menu-burger js-open-menu">
                     <svg class="btn-mobile" width="32" height="32" aria-label="Mobile menu switcher">
-                        <use class="icon-burger" href="./images/icons.svg#menu-burger"></use>
+                        <use class="icon-burger" href="./images/icons.svg/sprite.svg#icon-tttt"></use>
                     </svg>
                 </button>
             </div>
@@ -265,7 +265,7 @@
                     <button type="submit" class="btn-subscribe">
                         Subscribe
                         <svg class="subscribe-icon" width="24" height="24">
-                            <use href="./images/icons.svg#logo-subscribe"></use>
+                            <use href="./images/icons.svg/sprite.svg#icon-3333lusy"></use>
                         </svg>
                     </button>
                 </div>
@@ -280,7 +280,7 @@
         <div class="mobile-btn-close">
             <button type="button" class="btn-menu-close js-close-menu">
                 <svg class="btn-cross" width="8" height="8" aria-label="Mobile menu switcher">
-                    <use class="icon-cross" href="./images/icons.svg#close-mobile"></use>
+                    <use class="icon-cross" href="./images/icons.svg/sprite.svg#icon-xrestuk"></use>
                 </svg>
             </button>
         </div>
@@ -289,9 +289,9 @@
         <div class="mobile-navigation">
             <nav class="mob-nav">
                 <ul class="mob-list list">
-                    <li class="chapter"><a href="./index.html" class="link current">Studio</a></li>
-                    <li class="chapter"><a href="./portfolio.html" class="link">Portfolio</a></li>
-                    <li class="chapter"><a href="" class="link mob-menu-open">Contacts</a></li>
+                    <li class="chapter"><a href="./index.html" class="link current mob-menu-open">Studio</a></li>
+                    <li class="chapter"><a href="./portfolio.html" class="link ">Portfolio</a></li>
+                    <li class="chapter"><a href="" class="link">Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -300,10 +300,10 @@
         <div class="mobile-social">
             <address class="menu-address">
                 <ul class="address-mob list">
-                    <li class="chapter">
+                    <li class="chapter menu-mail">
                         <a href="mailto:info@devstudio.com" class="ping-mob">info@devstudio.com</a>
                     </li>
-                    <li class="chapter">
+                    <li class="chapter menu-mail">
                         <a href="tel:+110001111111" class="ping-mob mobil">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
@@ -312,28 +312,28 @@
                     <li class="chapter-social">
                         <a href="" class="mobile-link">
                             <svg class="mob-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#instagram-menu"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="chapter-social">
                         <a href="" class="mobile-link">
                             <svg class="mob-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#twitter-menu"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="chapter-social">
                         <a href="" class="mobile-link">
                             <svg class="mob-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#facebook-menu"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="chapter-social">
                         <a href="" class="mobile-link">
                             <svg class="mob-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#linkedin-menu"></use>
+                                <use href="./images/icons.svg/sprite.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
