--- a/portfolio.html
+++ b/portfolio.html
@@ -289,8 +289,8 @@
         <div class="mobile-navigation">
             <nav class="mob-nav">
                 <ul class="mob-list list">
-                    <li class="chapter"><a href="./index.html" class="link current mob-menu-open">Studio</a></li>
-                    <li class="chapter"><a href="./portfolio.html" class="link ">Portfolio</a></li>
+                    <li class="chapter"><a href="./index.html" class="link ">Studio</a></li>
+                    <li class="chapter"><a href="./portfolio.html" class="link current mob-menu-open">Portfolio</a></li>
                     <li class="chapter"><a href="" class="link">Contacts</a></li>
                 </ul>
             </nav>
